--- a/trunk/demo/tetris/tetris.css
+++ b/trunk/demo/tetris/tetris.css
@@ -24,6 +24,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     height: 470px;
+    width: 240px;
 }
 
 #info > #logo {
@@ -79,16 +80,17 @@ body {
 
 .button {
     margin: 0.4em;
-    padding: 0.7em 1em;
+    padding: 1em;
     text-align: center;
     cursor: pointer;
     outline: none;
     color: #fff;
+    min-width: 100px;
     font-weight: bold;
     background-color: #537fe4;
     border: none;
     border-radius: 15px;
-    box-shadow: 0 2px #999;
+    box-shadow: 1px 2px #aaa;
   }
 
 .button:hover {
@@ -122,11 +124,12 @@ body {
     display: flex;
     width: 540px;
     margin: -40px auto;
+    font-size: 12px;
 }
 
-.btn-primary{
+#btn-reset{
     background: #2B60DE;
-    color: #eee;
+    color: #fff;
     font-weight: bold;
     border: 0;
     padding: 12px 0;
@@ -135,13 +138,14 @@ body {
     text-transform: uppercase;
     font-size: 14px;
     cursor: pointer;
+    outline: none;
 }
 
-.btn-primary:hover {
+#btn-reset:hover {
     background-color: #1e4fc2;
 }
 
-.btn-primary:active {
+#btn-reset:active {
     background-color: #1e4fc2;
     transform: translateY(2px);
 }
